--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
         run: npm i
       # Build app for production
       - name: Build app bundle
-        run: npm run build:prod
+        run: npm run build --prod
       # Deploy to github pages
       - name: Deploy to pages
         uses: crazy-max/ghaction-github-pages@v3.1.0
